@@ -1,16 +1,6 @@
 /build/
 /install/
 
-# created by GNU Autotools
-/autom4te.cache/
-/autoscan.log
-/config.h
-/config.h.in
-/config.log
-/config.status
-/configure
-/configure.scan
-/Makefile
 
 # created by a failed build
 /tmp*
