@@ -4,10 +4,12 @@ env:
   global:
     - PREFIX=/usr/local
   matrix:
-    - CC=gcc    MLTON_COMPILE_ARGS="-codegen amd64"  REGRESSION=true
-    - CC=gcc    MLTON_COMPILE_ARGS="-codegen c"      REGRESSION=false
-    - CC=clang  MLTON_COMPILE_ARGS="-codegen c"      REGRESSION=false
-    - CC=clang  MLTON_COMPILE_ARGS="-codegen llvm"   REGRESSION=false
+    - CC=gcc                MLTON_COMPILE_ARGS="-codegen amd64"  REGRESSION=true
+    - CC=gcc                MLTON_COMPILE_ARGS="-codegen c"      REGRESSION=false
+    - CC="gcc -std=gnu99"   MLTON_COMPILE_ARGS="-codegen amd64"  REGRESSION=true
+    - CC="gcc -std=gnu99"   MLTON_COMPILE_ARGS="-codegen c"      REGRESSION=false
+    - CC=clang              MLTON_COMPILE_ARGS="-codegen c"      REGRESSION=false
+    - CC=clang              MLTON_COMPILE_ARGS="-codegen llvm"   REGRESSION=false
 install:
   - sudo apt-get -qq update
   - sudo apt-get install -qq mlton
