@@ -1,4 +1,2 @@
 /gen-rtld-flags
 /gen-rtld-flags.exe
-
-/Makefile
