@@ -1,17 +1,15 @@
-PATH := ../bin:$(shell echo $$PATH)
+CC := gcc
 
-CC := @CC@
-CFLAGS := -Wall
-
-EXE :=
+######################################################################
+######################################################################
 
 TARGET_ARCH := $(shell ../../bin/host-arch)
 TARGET_OS := $(shell ../../bin/host-os)
 
+EXE :=
 ifeq ($(TARGET_OS), cygwin)
 EXE := .exe
 endif
-
 ifeq ($(TARGET_OS), mingw)
 EXE := .exe
 endif
@@ -19,6 +17,7 @@ endif
 .DELETE_ON_ERROR:
 all: memory/platform/rtld-flags.$(TARGET_OS).sml
 
+CFLAGS := -Wall
 memory/platform/rtld-flags.$(TARGET_OS).sml: gen-rtld-flags.c
 	$(CC) $(CFLAGS) -o gen-rtld-flags gen-rtld-flags.c
 	./gen-rtld-flags > memory/platform/rtld-flags.$(TARGET_OS).sml
