@@ -12,6 +12,3 @@
 /mlton-smlnj.*-*
 /mlton-stubs.mlb
 /mlton.def-use
-
-# GNU Autoconf generated
-/Makefile
