@@ -15,7 +15,7 @@ BOOTSTRAP_MLTON_COMPILE_ARGS :=
 
 GIT := git
 GREP := grep
-SED := @SED@
+SED := sed
 
 ######################################################################
 ######################################################################
