@@ -5,6 +5,3 @@
 /gdtoa/
 /c-types.h
 /ml-types.h
-
-## autoconf files
-/Makefile
