@@ -14,6 +14,13 @@ Here are the changes from version 20130715 to version YYYYMMDD.
 
 === Details
 
+* 2018-01-31
+  ** Revert rudimentary support for `./configure`; the support was so minimal
+  that it seems unhelpful to pretend that there are exhaustive compatibility
+  checks being performed.  All of the basic configuration can be accomplished
+  with simple `make` variable definitions.
+
+
 * 2018-01-25
   ** Remove (expert, undocumented) `-debug-format` option; the same effect can
   be achieved with `-as-opt` and `-cc-opt`.
